@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.12.14-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-12-14 12:58:55, took 00:31:00, with 50 workers, on 4108 cases, 0 failed, 0 traces, 6 retries<br/>
+tested: 2025-12-14 13:47:03, took 00:12:40, with 50 workers, on 4110 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -4101,9 +4101,11 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/serv-dyndest.tst">serv-dyndest.tst</a></td><td>success</td><td>dynamic tunnel destination</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/serv-eventmgr.tst">serv-eventmgr.tst</a></td><td>success</td><td>event manager</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/serv-forward.tst">serv-forward.tst</a></td><td>success</td><td>forwarder server</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/serv-http01.tst">serv-http01.tst</a></td><td>success</td><td>proxy over http</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/serv-http02.tst">serv-http02.tst</a></td><td>success</td><td>ssh over http</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/serv-http03.tst">serv-http03.tst</a></td><td>success</td><td>sdwan over http</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/serv-ldap.tst">serv-ldap.tst</a></td><td>success</td><td>ldap server</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/serv-loadbal.tst">serv-loadbal.tst</a></td><td>success</td><td>load balancer server</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/serv-proxy.tst">serv-proxy.tst</a></td><td>success</td><td>proxy server</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/serv-radius.tst">serv-radius.tst</a></td><td>success</td><td>radius server</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/serv-scheduler.tst">serv-scheduler.tst</a></td><td>success</td><td>scheduler</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/serv-sdwan01.tst">serv-sdwan01.tst</a></td><td>success</td><td>sdwan over ipv4</td></tr>
