@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v25.12.14-cur, done by sprscc13@mrn0b0dy.
--;-;-;2025-12-14 13:09:32, took 00:10:07, with 50 workers, on 855 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2025-12-14 13:57:35, took 00:10:02, with 50 workers, on 855 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin, udp
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
