@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.12.14-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-12-14 13:09:32, took 00:10:07, with 50 workers, on 855 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2025-12-14 13:57:35, took 00:10:02, with 50 workers, on 855 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
